Add service discovery and health check + minor improvements

--- a/config.yml
+++ b/config.yml
@@ -1,28 +1,34 @@
 app:
-  env: dev
+    name: order-service
+    env: dev
 server:
-  port: 8001
+    host: localhost
+    port: 8001
 database:
-  name: "db"
-  host: "127.0.0.1"
-  port: 5432
-  ssl: "disable"
-  user: "user"
-  password: "password"
-  timezone: "Asia/Tehran"
-  connection:
-    idle: 10
-    open: 100
+    name: db
+    host: localhost
+    port: 5436
+    ssl: disable
+    user: user
+    password: password
+    timezone: UTC
+    connection:
+        idle: 10
+        open: 100
 messaging:
-  protocol: "amqp"
-  host: "127.0.0.1"
-  port: 5672
-  user: "guest"
-  password: "guest"
-  order:
-    exchange:
-      name: "order-exchange"
-      type: "direct"
-    queue: "orders"
+    protocol: amqp
+    host: localhost
+    port: 5672
+    user: guest
+    password: guest
+    order:
+        exchange:
+            name: order-exchange
+            type: direct
+        queue: orders
+discovery:
+    server:
+        host: localhost
+        port: 8500
 logging:
-  level: "debug"
+    level: debug
