--- a/compose.yml
+++ b/compose.yml
@@ -1,41 +1,59 @@
 services:
-  app:
-    build:
-      context: .
-    ports:
-      - "8001:8001"
-    env_file:
-        - dev.env
-    profiles:
-      - app
-    depends_on:
-      database:
-        condition: service_healthy
-      queue:
-        condition: service_healthy
-    develop:
-      watch:
-        - action: rebuild
-          path: ./internal
-  database:
-    image: postgres:16.1-alpine3.18
-    environment:
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: db
-    ports:
-      - "5432:5432"
-    healthcheck:
-        test: ["CMD-SHELL", "pg_isready", "-d", "db"]
-        timeout: 5s
-        retries: 10
-  queue:
-    image: rabbitmq:3.12.11-management-alpine
-    ports:
-      - 15672:15672
-      - 5672:5672
-    healthcheck: 
-        test: ["CMD", "rabbitmq-diagnostics", "-q", "ping"]
-        timeout: 5s
-        retries: 10
-
+    app:
+        build:
+            context: .
+        ports:
+            - "8001:8001"
+        env_file:
+            - dev.env
+        profiles:
+            - app
+        depends_on:
+            database:
+                condition: service_healthy
+            queue:
+                condition: service_healthy
+        develop:
+            watch:
+                - action: rebuild
+                  path: ./internal
+    database:
+        image: postgres:16.1-alpine3.18
+        environment:
+            POSTGRES_USER: user
+            POSTGRES_PASSWORD: password
+            POSTGRES_DB: db
+        ports:
+            - "5436:5432"
+        healthcheck:
+            test: ["CMD-SHELL", "pg_isready", "-d", "db"]
+            timeout: 5s
+            retries: 10
+    queue:
+        image: rabbitmq:3.12.11-management-alpine
+        ports:
+            - 15672:15672
+            - 5672:5672
+        healthcheck:
+            test: ["CMD", "rabbitmq-diagnostics", "-q", "ping"]
+            timeout: 5s
+            retries: 10
+    discovery:
+        image: consul:1.15.4
+        ports:
+            - "8504:8500"
+        profiles:
+            - app
+        healthcheck:
+            test: ["CMD", "curl", "-f", "http://localhost:8500"]
+            timeout: 3s
+            retries: 10
+    discovery-host:
+        image: consul:1.15.4
+        network_mode: host
+        profiles:
+            - discovery
+        healthcheck:
+            test: ["CMD", "curl", "-f", "http://localhost:8500"]
+            timeout: 3s
+            retries: 10
