--- a/compose.yml
+++ b/compose.yml
@@ -35,6 +35,9 @@ services:
         ports:
             - 15672:15672
             - 5672:5672
+        profiles:
+            - discovery
+            - app
         healthcheck:
             test: ["CMD", "rabbitmq-diagnostics", "-q", "ping"]
             timeout: 5s
